# MRNote

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  MRAI_notebook_ai_os_build_spec.md  README.md  security_best_practices_report.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202602150001_init_schema.py  202602150002_soft_delete.py  (+36 more)
apps/api/app/: main.py
apps/api/app/db/: base.py  (+1 more)
apps/api/scripts/: repair_memory_graph.py
apps/api/tests/: conftest.py  test_ai_action_log_models.py  test_ai_action_logger.py  test_ai_action_retrieval.py  test_api_integration.py  test_attachment_upload.py  test_auth_c_fixes.py  test_auth_google.py  test_backend_spec_alignment.py  test_billing_abuse_fixes.py  test_billing_checkout.py  test_billing_core_models.py  test_billing_me.py  test_billing_webhook.py  test_chat_quota_gates.py  test_customer_account_model.py  test_dashscope_responses.py  test_dashscope_stream_usage.py  test_digest_email_timezone.py  test_document_indexer.py  test_entitlement_resolver.py  test_fake_s3.py  test_fsrs.py  test_injection_fixes.py  test_notebook_access_gates.py  test_notebook_ai_logging.py  test_notebook_attachment_meta.py  test_notebook_page_embedding.py  test_notebook_visibility.py  test_one_time_expiry.py  test_p0_spec_alignment.py  test_persona_digest.py  test_plan_entitlements.py  test_proactive_api.py  test_proactive_fanout_tasks.py  test_proactive_generator.py  test_proactive_generator_task.py  test_proactive_materials.py  test_proactive_models.py  test_quota_enforcement.py  (+20 more)
(+638 files in other folders)
